--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "webpack --progress --devtool source-map --watch",
-    "build": "webpack --env=production --progress --optimize-minimize",
+    "build": "webpack --env=production --progress",
     "serve": "webpack-dev-server --hot --inline --devtool source-map"
   },
   "keywords": [],
@@ -35,6 +35,7 @@
     "style-loader": "^0.18.2",
     "three": "^0.87.1",
     "ts-loader": "^2.3.4",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
